--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -23,4 +23,10 @@
       </a>
     </h3>
   </div>
+
+  <div class="post-request-test">
+    <h3>Test Post Request</h3>
+    <button (click)="postData()">ClickMe :)</button>
+    <h5>Response: {{postRequestResponse}}</h5>
+  </div>
 </div>
